--- a/index.html
+++ b/index.html
@@ -4,8 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaming Landing Page Design </title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="container">
+    <nav class="header">
+        <div class="logo"> <img src="images/Frame.png" alt="">
+            <h1>Gamer</h1>
+        </div>
+       <div class="header-content">
+        <ul>
+            <li>About us</li>
+            <li>Developers</li>
+            <li>Follow Us On</li>
+
+        </ul>
+
+       </div>
+
+    </nav>
+   <div class="banner">
+    <div class="banner-content">
+      <h4> Play Like The</h4>
+      <h2>G.O.A.T</h2>
+      <p>1-Click instant play</p>
+      <p>No Download</p>
+      <p>1000s of supported online games</p>
+      <div class="banner-btn">
+        <button class="btn-1">Sign In</button>
+        <button class="btn-2">Go Rogue</button>
+    </div>
+    </div>
     
+    <div class="banner-img">
+<img src="images/Group 18.png" alt="">
+</div>
+
+   </div> 
 </body>
 </html>
