--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="container">
+    
     <nav class="header">
         <div class="logo"> <img src="images/Frame.png" alt="">
             <h1>Gamer</h1>
@@ -40,5 +41,19 @@
 </div>
 
    </div> 
+   <div class="gamer">
+    <div class="gamer-img">
+        <img src="images/pngwing 4.png" alt="">
+        
+   </div> 
+   <div class="game-content">
+    <h3>We are gamer</h3>
+    <p class="gamer-desk">An international digital games and entertainment company. <br>We develop, publish and distribute multiplayer mobile games. <br> We reach over 400 million players each month and <br> our audience keeps growing.</p>
+    <button class="game-btn">know more</button>
+    <p>Our purpose... <br>
+        <b>“unleash the gamer in everyone”</b></p>
+   </div>
+   
+
 </body>
 </html>
