--- a/index.html
+++ b/index.html
@@ -53,7 +53,92 @@
     <p>Our purpose... <br>
         <b>“unleash the gamer in everyone”</b></p>
    </div>
-   
+   </div>
+   <div class="online-game">
+    <div class="online-game-content">
+      <h2>Online Games <span> Funny Videos </span></h2>
+      <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+    </div>
+    <div class="online-img">
+      <div class="img-1">
+        <img src="images/Rectangle 4.png" alt="" />
+        <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+      </div>
+      <div class="img-1">
+        <img src="images/Rectangle 5.png" alt="" />
+        <p>Did you score? #unblockedgames #school</p>
+      </div>
+      <div class="img-1">
+        <img src="images/Rectangle 7.png" alt="" />
+        <p>Breaking game records like OG</p>
+      </div>
+      <div class="img-1">
+        <img src="images/Rectangle 6.png" alt="" />
+        <p>Busted gaming on school laptop, but you are still lit.</p>
+      </div>
+    </div>
+  </div>
+  <div class="play">
+    <div class="play-content">
+        <h3><span>Play Instantly,</span>
+            No Downloads
+            No Installs.</h3>
+            <p>Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+            </div>
+            <div class="play-img">
+                <div class="play-img-1">
+                <img src="images/Rectangle 55.png" alt="">
+                <div class="play-img-2">
+                   
+                </div>
+                </div>
+             
+    </div>
+
+  </div>
+</div>
+  <div class="feature">
+    <div class="feature-img-1">
+        <div class="ft-img-5">
+            <img src="images/Rectangle 11.png" alt="">
+            <h5>Action game</h5>
+        </div>
+        <div class="ft-img-5">
+            <img src="images/Rectangle 12.png" alt="">
+            <h5>Adventure Games</h5>
+        </div>
+        <div class="ft-img-5">
+            <img src="images/Rectangle 13.png" alt="">
+            <h5>Arcade Games</h5>
+        </div>
+        <div class="ft-img-5">
+            <img src="images/Rectangle 14.png" alt="">
+            <h5>Educational Games</h5>
+        </div>
+        <div class="ft-img-5">
+            <img src="images/Rectangle 15.png" alt="">
+            <h5>word Games</h5>
+        </div>
+        </div >
+        <div class="feature-img-2">
+        <div class="ft-img-5">
+            <img src="images/Rectangle 16.png" alt="">
+            <h5>Role Palying Games</h5>
+        </div>
+        <div class="ft-img-5">
+            <img src="images/Rectangle 17.png" alt="">
+            <h5>Music & Audio Games</h5>
+        </div>
+        <div class="ft-img-5">
+            <img src="images/Rectangle 18.png" alt="">
+            <h5>Puzzle Games</h5>
+        </div>
+        <div class="ft-img-5">
+            <img src="images/Rectangle 19.png" alt="">
+            <h5>Strategy Games</h5>
+        </div>
+    </div>
+  </div>
 
 </body>
 </html>
